--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,14 @@
 environment: development
 http_addr: :8080
+
 youdao:
   app_id: 55f6b4a5233a7863
   app_key: rlAijgxZuVbSPtUxclB2BgZ5zF0baKpx
+
+cache:
+  redis: true
+
+redis:
+  host: '127.0.0.1'
+  port: 6379
+  db: 1
