--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
             - '8080:8080'
         volumes:
             - .:/code
-        command: :
+        command:
             - app
             - --config=/code/config.production.yaml
     redis:
