--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,18 @@ services:
     api:
         build: .
         ports:
-            - '8080-8090:8080'
+            - '8080-8081:8080'
         volumes:
             - .:/code
+        deploy:
+            replicas: 2
         command:
             - translator-api
             - serve
             - --config=/code/config.production.yaml
+        links:
+            - 'redis'
     redis:
         image: 'redis:6'
+        volumes: 
+            - /data/redis:/data
