--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
             - '8080-8081:8080'
         volumes:
             - .:/code
-            - ./credentials:~/.aws/credentials
+            - ./credentials:$HOME/.aws/credentials
         deploy:
             replicas: 2
         command:
